fix(Storage): fix uneven PDisks

--- a/src/containers/Storage/Pdisk/Pdisk.scss
+++ b/src/containers/Storage/Pdisk/Pdisk.scss
@@ -1,7 +1,7 @@
 .pdisk-storage {
     position: relative;
 
-    min-width: 120px;
+    width: 120px;
 
     border-radius: 4px; // to match interactive area with disk shape
 
